# ZoDream.Archiver

./: .gitignore  README.md  flow.drawio
imhex/patterns/: DBreeze.hexpat  FairyGUI.hexpat  g.hexpat  iFAction.hexpat  ktex.hexpat
src/: ZoDream.Archiver.sln  ZoDream.Archiver.slnx  ZoDream.Build.targets
src/AutodeskExporter/: AutodeskExporter.csproj
src/ZoDream.Archiver/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  ZoDream.Archiver.csproj  app.manifest
src/ZoDream.Shared.Bundle/: BundleBinaryReader.cs  BundleChunk.cs  BundleCodecType.cs  BundleConverter.cs  BundleConverterCollection.cs  BundleElementScanner.cs  BundleEntry.cs  BundleOptions.cs  BundleOptions.extract.cs  BundleRequest.cs  BundleSerializer.cs  BundleService.cs  BundleSource.cs  BundleSource.order.cs  BundleStorage.cs  BundleStorage.static.cs  (+41 more)
zodream/: .gitignore  Cargo.toml
zodream/src/: error.rs  io.rs  lib.rs  main.rs
zodream/src/compression/: compressor.rs  lua.rs  lz4.rs  lzxd.rs  mod.rs
zodream/src/drawing/: astc.rs  atc.rs  bcn.rs  color.rs  crunch.rs  etc.rs  mod.rs  pvr.rs
zodream/src/encryption/: arc4.rs  blowfish.rs  encryptor.rs  mod.rs  own.rs  threeway.rs
zodream/src/storage/: mod.rs  reader.rs  writer.rs
zodream/src/storage/lua/: lua51.rs  lua52.rs  lua53.rs  lua54.rs  luajit.rs  luau.rs  mod.rs
zodream/tests/: arc4.rs  ktx.rs  lua51.rs  luajit.rs  own.rs  threeway.rs
zodream/tests/lua51/: test.lua  test.luac
zodream/tests/lua53/: test.luac
zodream/tests/lua54/: test.lua  test.luac
zodream/tests/luajit/: test.luac  test_i.luac
(+1982 files in other folders)
