[package]
name = "libzodream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["lib", "cdylib"]

[dependencies]
lz4 = "1.26.0"
skipjack = "0.2.0"
# lzham = "0.1.1"
zip = "2.2.0"
zstd = "0.13.2"
safer-ffi.version = "0.1.12"
safer-ffi.features = [
    "async-fn",
    "futures",
]

[features]
headers = ["safer-ffi/headers"]