[package]
name = "zodream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["lib", "cdylib"]

[dependencies]
cbc = "0.1.2"
inout = "0.1.3"
lz4 = "1.26.0"
skipjack = "0.2.0"
# lzham = "0.1.1"
blowfish = "0.9.1"
rc4 = "0.1.0"
cipher = "0.4.4"
lzxd = "0.2.5"
zip = "2.2.0"
zstd = "0.13.2"
twox-hash = "1.6.3"
bitflags = "2.6.0"
texture2ddecoder = "0.1.1"
safer-ffi.version = "0.1.12"
safer-ffi.features = [
    "async-fn",
    "futures",
]

[features]
headers = ["safer-ffi/headers"]