[package]
name = "zodream"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
crate-type=["lib", "cdylib"]

[dependencies]
cbc = "0.1.2"
inout = "0.1.4"
lz4 = "1.28.1"
skipjack = "0.2.0"
# lzham = "0.1.1"
blowfish = "0.9.1"
rc4 = "0.1.0"
cipher = "0.4.4"
lzxd = "0.2.6"
zip = "4.3.0"
zstd = "0.13.3"
twox-hash = "2.1.1"
bitflags = "2.9.1"
texture2ddecoder = "0.1.2"
safer-ffi.version = "0.1.13"
safer-ffi.features = [
    "async-fn",
    "futures",
]

[features]
headers = ["safer-ffi/headers"]